--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -37,11 +37,6 @@ border-radius: 0px;
 .pinnedcontent div {
 }
 
-.awesome {
-    background-color: #b1b1b1;
-    width: auto
-}
-
 .middlebutton {
     margin-left:40%;
     width:20%;    
@@ -53,6 +48,16 @@ text-shadow: 1px 1px 0px rgb(73, 124, 255);
 }
 
 .hero-unit p{
-	color:#33AAE6;
+	color:#338;
 	text-shadow: 1px 1px 0px rgb(60, 100, 255);
+}
+
+body {
+
+    padding-top:60px;
+}
+
+.nav-tabs > .active a{
+
+    background-color:#DDDDFF;
 }
