--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -1,7 +1,4 @@
-.container {
-	
-	width: 1470px !important;
-}
+
 
 div.hero-unit.awesome.flat {
 -webkit-border-radius: 0px;
@@ -60,4 +57,83 @@ body {
 .nav-tabs > .active a{
 
     background-color:#DDDDFF;
+}
+
+.container,
+.navbar-static-top .container,
+.navbar-fixed-top .container,
+.navbar-fixed-bottom .container {
+  width: 1280px;
+}
+.span12 {
+  width: 1200px;
+}
+.span11 {
+  width: 1100px;
+}
+.span10 {
+  width: 1000pc;
+}
+.span9 {
+  width: 900px;
+}
+.span8 {
+  width: 800px;
+}
+.span7 {
+  width: 700px;
+}
+.span6 {
+  width: 600px;
+}
+.span5 {
+  width: 500px;
+}
+.span4 {
+  width: 400px;
+}
+.span3 {
+  width: 300px;
+}
+.span2 {
+  width: 200px;
+}
+.span1 {
+  width: 100px;
+}
+.offset12 {
+  margin-left: 1240px;
+}
+.offset11 {
+  margin-left: 1140px;
+}
+.offset10 {
+  margin-left: 1040px;
+}
+.offset9 {
+  margin-left: 940px;
+}
+.offset8 {
+  margin-left: 840px;
+}
+.offset7 {
+  margin-left: 740px;
+}
+.offset6 {
+  margin-left: 640px;
+}
+.offset5 {
+  margin-left: 540px;
+}
+.offset4 {
+  margin-left: 440px;
+}
+.offset3 {
+  margin-left: 340px;
+}
+.offset2 {
+  margin-left: 240px;
+}
+.offset1 {
+  margin-left: 140px;
 }
