fixed a load of css errors in news, need to rework how the news are edited and saved. NCEdit makes a complete mess of HTML

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -193,6 +193,10 @@ margin-left: 50px;
 margin-top: 5px;
 }
 
+.newscontent {
+  float: left;
+margin-top: 20px;
+}
 
 .nav {
     margin-left:auto;
@@ -206,7 +210,7 @@ margin-top: 5px;
 }
 
 .nav li {
- width: 50%;  
+ width: 33%;  
  text-align: center;
 }
 
