--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -79,6 +79,19 @@ min-width: 180px;
   width: 80%;
 }
 
+.angemeldetlist{
+  list-style: none;
+}
+
+.teilnehmerlink {
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 5px;
+  color: white;
+}
+.teilnehmerlink a {
+  color: white;
+}
 .newsinput {
   width: 80%;
   height: 300px;
@@ -183,6 +196,25 @@ margin-right: 20px;
   border-bottom: 1px dashed #33F;
   width: 120px;
 }
+.progress{
+  width: 420px;
+  margin: 0 auto;
+  background-color: #2589DD;
+  margin-bottom: 10px;
+}
+.bar-angemeldet {
+  background-color: #149BDF !important;
+  background-image: none !important;
+}
+.bar-bezahlt {
+  background-color: #0C7CCC !important;
+  background-image: none !important;
+}
+.bar-frei {
+  background-color: #5CBBFF !important;
+  background-image: none !important;
+}
+
 
 .commentaddlink {
   float: left;
@@ -210,7 +242,7 @@ margin-top: 20px;
 }
 
 .nav li {
- width: 33%;  
+ width: 25%;  
  text-align: center;
 }
 
