--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -13,6 +13,10 @@ article footer a {
   color: teal;
 
 }
+.tournamentlogo {
+  height: 200px;
+}
+
 
 .ui-autocomplete{
 list-style: none !important;
@@ -258,6 +262,10 @@ margin-top: 5px;
 margin-top: 20px;
 }
 
+.faaaak {
+  float: none !important;
+}
+
 .nav {
     margin-left:auto;
     margin-right:auto;
@@ -270,7 +278,7 @@ margin-top: 20px;
 }
 
 .nav li {
- width: 20%;  
+ width: 25%;  
  text-align: center;
 }
 
