--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -58,17 +58,14 @@ footer {
 
 
 .hero-unit.awesome.flat.headerawesome{
-padding-top: 60px;
-padding-left: 0px;
-padding-right: 0px;
-margin-top: -460px;
+padding: 0px;
 margin-bottom: 0px;
+height: 240px;
 width: 100%;
-float: left;
 z-index: 5;
 overflow: hidden;
 background-color: #113585;
-box-shadow: 2px 0px 49px;
+box-shadow: 2px 0px 49px inset;
 }
 
 .hero-unit h1,p{
@@ -307,101 +304,17 @@ text-shadow: 1px 1px 0px #5555AA;
 body {
     background-color: #edeeef;
     background-image: url('../img/pw_maze_white.png');
-    padding-top:60px;
 }
 
 .shadowblock{
-    width: 800px;
-height: 3px;
-margin: 0px;
-padding: 0px;
+	width: 800px;
+	height: 3px;
+	margin: 0px;
+	padding: 0px;
 }
 
 .nav{
-  width: 800px;
-  margin: auto;
-}
-
-
-.container,
-.navbar-static-top .container,
-.navbar-fixed-top .container,
-.navbar-fixed-bottom .container {
-  width: 1250px;
-}
-.span12 {
-  width: 1200px;
-}
-.span11 {
-  width: 1100px;
-}
-.span10 {
-  width: 1000pc;
-}
-.span9 {
-  width: 900px;
-}
-.span8 {
-  width: 800px;
-  padding-right: 2px;
-  padding-left: 2px;
-}
-.span7 {
-  width: 700px;
-}
-.span6 {
-  width: 600px;
-}
-.span5 {
-  width: 500px;
-}
-.span4 {
-  width: 400px;
-}
-.span3 {
-  width: 300px;
-}
-.span2 {
-  width: 200px;
-}
-.span1 {
-  width: 100px;
-}
-.offset12 {
-  margin-left: 1240px;
-}
-.offset11 {
-  margin-left: 1140px;
-}
-.offset10 {
-  margin-left: 1040px;
-}
-.offset9 {
-  margin-left: 940px;
-}
-.offset8 {
-  margin-left: 840px;
-}
-.offset7 {
-  margin-left: 740px;
-}
-.offset6 {
-  margin-left: 640px;
-}
-.offset5 {
-  margin-left: 540px;
-}
-.offset4 {
-  margin-left: 440px;
-}
-.offset3 {
-  margin-left: 340px;
-}
-.offset2 {
-  margin-left: 240px;
-}
-.offset1 {
-  margin-left: 140px;
+   margin: auto;
 }
 
 .navbar .nav,
@@ -415,4 +328,12 @@ padding: 0px;
 
 .navbar-inner {
   text-align:center;
+}
+
+.navbar-fixed-top {
+    position:fixed;
+}
+
+.navbar-fixed-top-active {
+padding-top: 45px
 }
