--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -63,15 +63,20 @@ footer {
   width: auto;
  }
 
-.hero-unit.awesome.flat.headerawesome{
+.headerawesome{
 padding: 0px;
-margin-bottom: 0px;
+padding-left: 10%;
+padding-right: 10%;
+margin: 0px;
 height: 200px;
-width: 100%;
 z-index: 5;
 overflow: hidden;
 background-color: #113585;
 box-shadow: 2px 0px 49px inset;
+}
+
+.row.headerawesome .container {
+width: 960px;
 }
 
 .hero-unit h1,p{
@@ -82,9 +87,20 @@ p{
   color: #173675;
 }
 
+.bannertitle h4 {
+font-weight: normal;
+color: #FEFEFE;
+line-height: 20px;
+font-size: 20px;
+text-align: center;
+}
+
+.bannertitle {
+margin-top: 40px;
+}
+
 .bannerdiv {
   float: left;
-  width: 100%;
   z-index: 1;
 
 }
@@ -97,6 +113,81 @@ p{
   min-width: 180px;
 }
 
+.kickimg {
+	max-height: 62px;
+	width: 100px;
+	float: left;
+}
+
+.kickdesc h5{
+color: white;
+line-height: 23px;
+font-size: 17px;
+font-weight: normal;
+vertical-align: middle;
+text-align: center;
+}
+
+.kickprogress h2 {
+color: white;
+text-align: center;
+font-size: 28px;
+float: left;
+}
+.kickbar {
+height: 62px;
+}
+
+.progress {
+margin-bottom: 0px;
+}
+
+.kickprogress h3 {
+line-height: 30px;
+font-size: 30px;
+color: #FCFCF0;
+text-align: center;
+float: left;
+margin: 0px;
+/*text-shadow: 1px 1px 0px #CFCFCF,
+2px 2px 0px #CDCDCD;*/
+}
+
+.esportsmoney .progress {
+width: 180px;
+float: left;
+}
+
+#lol .esportsmoney .progress .bar {
+background-color: #caaa27;
+}
+#csgo .esportsmoney .progress .bar {
+background-color: #9fa2a7;
+}
+#hots .esportsmoney .progress .bar {
+background-color: #8228cc;
+}
+
+.kickprogress .esportsmoney {
+width: 180px;
+height: 55px;
+margin-top: 4px;
+margin-bottom: 4px;
+padding: 0px;	
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+float: left;
+/*background-color: #1f4391;
+background-image: -moz-linear-gradient(top, #214799, #1c3d84);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#214799), to(#1c3d84));
+background-image: -webkit-linear-gradient(top, #214799, #1c3d84);
+background-image: -o-linear-gradient(top, #214799, #1c3d84);
+background-image: linear-gradient(to bottom, #214799, #1c3d84);
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff214799', endColorstr='#ff1c3d84', GradientType=0);
+border-color: #1c3d84 #1c3d84 #0f2045;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);*/
+}
 
 .glass-pill input {
   width: 80%;
@@ -233,12 +324,6 @@ margin-right: 20px;
   border-bottom: 1px dashed #33F;
   width: 120px;
 }
-.progress{
-  width: 420px;
-  margin: 0 auto;
-  background-color: #2589DD;
-  margin-bottom: 10px;
-}
 .bar-angemeldet {
   background-color: #149BDF !important;
   background-image: none !important;
@@ -282,13 +367,6 @@ margin-top: 20px;
  height: auto;   
 }
 
-.pinnedcontent div {
-}
-
-.middlebutton {
-    margin-left:40%;
-    width:20%;    
-}
 .commentfield {
     width: 400px;
 }
@@ -349,6 +427,7 @@ padding-top: 45px
 
 .sidelogin input {
   width: 128px;
+  margin-bottom: 5px;
 }
 
 .sidelogin .submit input {
