changed user registration to look a bit better, beforefind and beforesave date conversion needs to be added in user model

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -441,3 +441,15 @@ padding-top: 45px
   font-weight: normal;
   font-size: 14px;
 }
+
+/* user add css*/
+#UserAddForm fieldset{
+width: 100px;
+float: left;
+margin-right: 70px;
+margin-top: 71px;
+}
+
+#UserAddForm .first {
+margin-top: 10px;
+}
