fixed seatmanager and added collapsibles in FAQ

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -420,10 +420,11 @@ position: relative;
 
 .navbar-fixed-top {
     position:fixed;
+    z-index: 50;
 }
 
 .navbar-fixed-top-active {
-padding-top: 45px
+padding-top: 45px;
 }
 
 .sidelogin input {
