added validation for 10franks

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -227,7 +227,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);*/
   padding-left: 3px;
   margin-bottom: 22px;
   padding-bottom: 5px;
-  color: #FBFCD0;
+  color: #113585;
 }
 
 .news ul {
