--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -414,7 +414,10 @@ position: relative;
   *zoom:1; /* hasLayout ie7 trigger */
   vertical-align: top;
 }
-
+.navbar .progress{
+	line-height: 14px;
+	height: 14px;
+}
 .navbar-inner {
   text-align:center;
 }
@@ -425,7 +428,7 @@ position: relative;
 }
 
 .navbar-fixed-top-active {
-padding-top: 45px;
+padding-top: 59px;
 }
 
 .sidelogin input {
