--- a/app/webroot/css/custom-responsive.css
+++ b/app/webroot/css/custom-responsive.css
@@ -62,4 +62,16 @@
     width: 48%;
    }
 
+  .sidelogin {
+    text-align: center;
+  }
+
+   .sidelogin input {
+    width: 80%;
+   }
+
+   .sidelogin .submit input {
+    width: 80%;
+   }
+
 }
