--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -9,6 +9,13 @@ div.hero-unit.awesome.flat {
 border-radius: 0px;
 	
 }
+
+.bannerheader {
+	position: absolute;
+	line-height: 0px;
+	font-size: 0px;
+	padding: 0px;
+	margin: 0px;
 }
 
 
@@ -17,7 +24,7 @@ article footer a {
 
 }
 .tournamentlogo {
-  height: 200px;
+  vertical-align: middle;
 }
 
 
@@ -569,11 +576,18 @@ background: #8228cc;
 .tournamentlist li{
   list-style: none;
 	float: left;
+	width: 185px;
   height: 200px;
   margin-bottom: 10px;
   margin-right: 10px;
+  line-height: 200px;
 }
 
+.tournamentlist li a{
+height: 20px;
+width: 20px;
+padding: 40px 0px;
+}
 .tournamentlist li:nth-child(4){
 	clear: both;
 }
@@ -590,6 +604,11 @@ background: #8228cc;
   width: 180px;
   float: left;
   word-wrap: break-word;
+}
+.tviewteamlist li {
+	list-style: none;
+	text-indent: 20px;
+	padding: 5px 0px;
 }
 
 #webchat {
